fixed gc picture vertical alignment

--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ h1{
 
 @media only screen and (max-width: 1280px){
     .testimonial{
-        font-size: .75em;
+        font-size: 1em;
     }
 }
 
@@ -385,4 +385,9 @@ h1{
     #gc1{
         padding-bottom: 1em;
     }
+}
+
+table{
+    height: 100%;
+    vertical-align: middle;
 }
